# deepagents_langchain

./: .env.example  .gitignore  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml
alembic/: README  env.py
deepagent_app/: __init__.py  agents.py  cli.py  config.py  database.py  http_client.py  settings.py  telemetry.py  tools.py
deepagent_app/agents/: __init__.py  research.py  research_v2.py  research_v3.py
deepagent_app/formatters/: __init__.py  markdown.py
deepagent_app/models/: __init__.py  base.py  research.py
deepagent_app/tools/: __init__.py  search.py
docs/: DATABASE.md
examples/: database_example.py
scripts/: init-db.sh
tests/: test_agent_smoke.py
