[project]
name = "deepagents-langchain"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "deepagents>=0.2.5",
    "langchain-openai>=1.0.2",
    "loguru>=0.7.3",
    "pydantic>=2.12.4",
    "pytest>=8.4.2",
    "python-dotenv>=1.2.1",
    "tavily-python>=0.7.12",
    "tenacity>=9.1.2",
]
